# bc-rust

./: .gitignore  Cargo.toml  INTRODUCTION.md  README.md
.cargo/: mutants.toml
.github/workflows/: publish_doc_benches_to_ghpages.yaml
cli/: Cargo.toml  readme.md
cli/src/: encoders_cmd.rs  hkdf_cmd.rs  mac_cmd.rs  main.rs  rng_cmd.rs  sha2_cmd.rs  sha3_cmd.rs
crypto/base64/: Cargo.toml
crypto/base64/benches/: base64_benches.rs
crypto/base64/src/: lib.rs
crypto/base64/tests/: base64_tests.rs
crypto/core-interface/: Cargo.toml
crypto/core-interface/src/: errors.rs  key_material.rs  lib.rs  traits.rs
crypto/core-interface/tests/: key_material_tests.rs  trait_tests.rs
crypto/core-test-framework/: Cargo.toml  readme.md
crypto/core-test-framework/src/: hash.rs  kdf.rs  lib.rs  mac.rs
crypto/factory/: Cargo.toml
crypto/factory/src/: hash_factory.rs  kdf_factory.rs  lib.rs  mac_factory.rs  rng_factory.rs  xof_factory.rs
crypto/factory/tests/: hash_factory_tests.rs  kdf_factory_tests.rs  mac_factory_tests.rs  rng_factory_tests.rs  xof_factory_tests.rs
crypto/hex/: Cargo.toml
crypto/hex/benches/: hex_benches.rs
crypto/hex/src/: lib.rs
crypto/hex/tests/: hex_tests.rs
crypto/hkdf/: Cargo.toml
crypto/hkdf/benches/: hkdf_benches.rs
crypto/hkdf/src/: lib.rs
crypto/hkdf/tests/: hkdf_tests.rs
crypto/hmac/: Cargo.toml
crypto/hmac/benches/: hmac_benches.rs
crypto/hmac/src/: lib.rs
crypto/hmac/tests/: hmac_tests.rs
crypto/rng/: Cargo.toml
crypto/rng/benches/: hash_drbg_benches.rs
crypto/rng/src/: hash_drbg80090a.rs  lib.rs
crypto/rng/tests/: hash_drbg80090a_tests.rs
crypto/sha2/: Cargo.toml
crypto/sha2/benches/: sha2_benches.rs
crypto/sha2/src/: lib.rs  sha256.rs  sha512.rs
crypto/sha2/tests/: sha2_tests.rs
crypto/sha3/: Cargo.toml
crypto/sha3/benches/: sha3_benches.rs
crypto/sha3/src/: keccak.rs  lib.rs  sha3.rs  shake.rs
crypto/sha3/tests/: sha3_tests.rs  shake_tests.rs
crypto/utils/: Cargo.toml
crypto/utils/src/: ct.rs  lib.rs
crypto/utils/tests/: ct_tests.rs  test_utils.rs
dev_scripts/: quality_stats.sh
libbc-rust/: Cargo.toml  readme.md
libbc-rust/src/: lib.rs
src/: lib.rs
