[workspace]
members = ["crypto/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]

# *** Internal Dependencies ***
core-interface = { path = "./crypto/core-interface", version = "0.1.0" }
core-test-framework = { path = "./crypto/core-test-framework", version = "0.1.0"}
hex = { path = "./crypto/hex", version = "0.1.0" }
hkdf = { path = "./crypto/hkdf", version = "0.1.0"}
hmac = { path = "./crypto/hmac", version = "0.1.0"}
rng = { path = "./crypto/rng", version = "0.1.0" }
sha2 = { path = "./crypto/sha2", version = "0.1.0"}
sha3 = { path = "./crypto/sha3", version = "0.1.0"}
utils = { path = "./crypto/utils", version = "0.1.0"}


# *** External Dependencies ***
criterion = "0.8.1" # only for benchmarking, not used in lib or cli build

[profile.release]
lto = "thin"
