[workspace]
members = [ "cli","crypto/*" ]

[workspace.package]
edition = "2024"

[workspace.dependencies]

# *** Internal Dependencies ***
base64 = { path = "./crypto/base64", version = "0.1.0"}
cli = { path = "./cli", version = "0.1.0"}
core-interface = { path = "./crypto/core-interface", version = "0.1.0" }
core-test-framework = { path = "./crypto/core-test-framework", version = "0.1.0"}
factory = { path = "./crypto/factory", version = "0.1.0"}
hex = { path = "./crypto/hex", version = "0.1.0" }
hkdf = { path = "./crypto/hkdf", version = "0.1.0"}
hmac = { path = "./crypto/hmac", version = "0.1.0"}
rng = { path = "./crypto/rng", version = "0.1.0" }
sha2 = { path = "./crypto/sha2", version = "0.1.0"}
sha3 = { path = "./crypto/sha3", version = "0.1.0"}
utils = { path = "./crypto/utils", version = "0.1.0"}


# *** External Dependencies ***
criterion = "0.8.1" # only for benchmarking, not used in lib or cli build

[profile.release]
lto = "thin"
#strip = "debuginfo"


# libbc-rust
[package]
name = "bc-rust"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64.workspace = true
core-interface.workspace = true
factory.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
rng.workspace = true
sha2.workspace = true
sha3.workspace = true