[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
hex.workspace = true
factory.workspace = true
core-interface.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3.workspace = true

[[bin]]
name = "bc-rust"
path = "src/main.rs"