[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }

bouncycastle.workspace = true

# because of meta-package, don't need to list them out
#bouncycastle-base64.workspace = true
#bouncycastle-hex.workspace = true
#bouncycastle-factory.workspace = true
#bouncycastle-core-interface.workspace = true
#bouncycastle-hkdf.workspace = true
#bouncycastle-hmac.workspace = true
#bouncycastle-sha2.workspace = true
#bouncycastle-sha3.workspace = true

[[bin]]
name = "bc-rust"
path = "src/main.rs"