[package]
name = "factory"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3.workspace = true
rng.workspace = true

[dev-dependencies]
core-test-framework.workspace = true
utils.workspace = true
hex.workspace = true
