[package]
name = "hkdf"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
hmac.workspace = true
sha2.workspace = true
utils.workspace = true

[dev-dependencies]
core-test-framework.workspace = true
criterion.workspace = true
rng.workspace = true
hex.workspace = true

[[bench]]
name = "hkdf_benches"
harness = false