[package]
name = "hmac"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
sha2.workspace = true
sha3.workspace = true
utils.workspace = true

[dev-dependencies]
core-test-framework.workspace = true
criterion.workspace = true
hex.workspace = true
rng.workspace = true

[[bench]]
name = "hmac_benches"
harness = false
