[package]
name = "rng"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
sha2.workspace = true
utils.workspace = true

# external
getrandom = "0.4.0-rc.1"

[dev-dependencies]
core-test-framework.workspace = true
criterion.workspace = true

[[bench]]
name = "hash_drbg_benches"
harness = false