[package]
name = "sha2"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
utils.workspace = true

[dev-dependencies]
criterion.workspace = true
core-test-framework.workspace = true
hex.workspace = true
rng.workspace = true

[[bench]]
name = "sha2_benches"
harness = false
