[package]
name = "sha3"
version = "0.1.0"
edition.workspace = true

[dependencies]
core-interface.workspace = true
utils.workspace = true

[dev-dependencies]
core-test-framework.workspace = true
criterion.workspace = true
hex.workspace = true
rng.workspace = true

[[bench]]
name = "sha3_benches"
harness = false
